Constructor comparison fully working

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -5,6 +5,7 @@
       <nav class="nav center">
         <a routerLink="/driver-comparison" routerLinkActive="active" class="nav-link">Driver Comparison</a>
         <a routerLink="/track" routerLinkActive="active" class="nav-link">Tracks</a>
+        <a routerLink="/constructor" routerLinkActive="active" class="nav-link">Constructor Comparison</a>
       </nav>
     </div>
   </header>
