--- a/frontend/src/app/components/track/track.html
+++ b/frontend/src/app/components/track/track.html
@@ -60,7 +60,9 @@
   <div class="winner-list" *ngIf="displayWinners.length">
     <h3>Recent winners</h3>
     <ul>
-      <li *ngFor="let winner of displayWinners">
+      <li *ngFor="let winner of displayWinners" 
+          [style.background-color]="getWinnerBackgroundColor(winner.team_color)"
+          [style.border-left-color]="winner.team_color || 'rgba(255, 255, 255, 0.08)'">
         <span class="year">{{ winner.year }}</span>
         <div class="winner-info">
           <span class="name">{{ winner.driver || 'Unknown driver' }}</span>
